...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_features" />

    <!-- Get Started Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/accent_color"
        android:fontFamily="@font/montserrat_bold"
        android:padding="16dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/tvLoginPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Login Prompt -->
    <TextView
        android:id="@+id/tvLoginPrompt"
...
